--- a/fetch_cup/models/pitcher_base/model.config
+++ b/fetch_cup/models/pitcher_base/model.config
@@ -8,7 +8,7 @@
   </author>
   <sdf version='1.4'>model.sdf</sdf>
   <description>
-    pitcher for pour task
+    pitcher for pur task
   </description>
 </model>
 
