Add rarelab_long_table model

--- a/fetchit_challenge/models/rarelab_long_table/model.config
+++ b/fetchit_challenge/models/rarelab_long_table/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <model>
-  <name>rarelab_long_table</name>
+  <name>fetchit_table</name>
   <version>0.1.0</version>
   <author>
    <name>Xiangfei Kong</name>
